--- a/src/xbuild/FieldFrame.form
+++ b/src/xbuild/FieldFrame.form
@@ -50,7 +50,7 @@
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" alignment="0" attributes="0">
               <Group type="103" groupAlignment="1" max="-2" attributes="0">
-                  <Component id="jXPanel2" alignment="0" pref="0" max="32767" attributes="1"/>
+                  <Component id="jXPanel2" alignment="0" pref="913" max="32767" attributes="1"/>
                   <Group type="102" alignment="1" attributes="0">
                       <EmptySpace max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
@@ -64,7 +64,7 @@
                       <EmptySpace min="-2" pref="99" max="-2" attributes="0"/>
                   </Group>
               </Group>
-              <EmptySpace pref="18" max="32767" attributes="0"/>
+              <EmptySpace pref="51" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -80,7 +80,7 @@
               <Component id="jXPanel1" min="-2" pref="369" max="-2" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
               <Component id="jXPanel2" min="-2" pref="271" max="-2" attributes="0"/>
-              <EmptySpace max="32767" attributes="0"/>
+              <EmptySpace pref="59" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -210,6 +210,7 @@
             </Component>
             <Component class="xbuild.Components.XFormattedTextField" name="txtXCRD">
               <Properties>
+                <Property name="horizontalAlignment" type="int" value="4"/>
                 <Property name="formatterFactory" type="javax.swing.JFormattedTextField$AbstractFormatterFactory" editor="org.netbeans.modules.form.editors.AbstractFormatterFactoryEditor">
                   <Format format="#0.00" subtype="-1" type="0"/>
                 </Property>
@@ -217,6 +218,7 @@
             </Component>
             <Component class="xbuild.Components.XFormattedTextField" name="txtYCRD">
               <Properties>
+                <Property name="horizontalAlignment" type="int" value="4"/>
                 <Property name="formatterFactory" type="javax.swing.JFormattedTextField$AbstractFormatterFactory" editor="org.netbeans.modules.form.editors.AbstractFormatterFactoryEditor">
                   <Format format="#0.00" subtype="-1" type="0"/>
                 </Property>
@@ -224,6 +226,7 @@
             </Component>
             <Component class="xbuild.Components.XFormattedTextField" name="txtELEV">
               <Properties>
+                <Property name="horizontalAlignment" type="int" value="4"/>
                 <Property name="formatterFactory" type="javax.swing.JFormattedTextField$AbstractFormatterFactory" editor="org.netbeans.modules.form.editors.AbstractFormatterFactoryEditor">
                   <Format format="#0.00" subtype="-1" type="0"/>
                 </Property>
@@ -351,6 +354,7 @@
           <SubComponents>
             <Component class="xbuild.Components.XFormattedTextField" name="txtAREA">
               <Properties>
+                <Property name="horizontalAlignment" type="int" value="4"/>
                 <Property name="formatterFactory" type="javax.swing.JFormattedTextField$AbstractFormatterFactory" editor="org.netbeans.modules.form.editors.AbstractFormatterFactoryEditor">
                   <Format format="#0.00" subtype="-1" type="0"/>
                 </Property>
@@ -358,6 +362,7 @@
             </Component>
             <Component class="xbuild.Components.XFormattedTextField" name="txtFLWR">
               <Properties>
+                <Property name="horizontalAlignment" type="int" value="4"/>
                 <Property name="formatterFactory" type="javax.swing.JFormattedTextField$AbstractFormatterFactory" editor="org.netbeans.modules.form.editors.AbstractFormatterFactoryEditor">
                   <Format format="#0.00" subtype="-1" type="0"/>
                 </Property>
@@ -365,6 +370,7 @@
             </Component>
             <Component class="xbuild.Components.XFormattedTextField" name="txtFLSA">
               <Properties>
+                <Property name="horizontalAlignment" type="int" value="4"/>
                 <Property name="formatterFactory" type="javax.swing.JFormattedTextField$AbstractFormatterFactory" editor="org.netbeans.modules.form.editors.AbstractFormatterFactoryEditor">
                   <Format format="#0.0" subtype="-1" type="0"/>
                 </Property>
@@ -372,6 +378,7 @@
             </Component>
             <Component class="xbuild.Components.XFormattedTextField" name="txtSLAS">
               <Properties>
+                <Property name="horizontalAlignment" type="int" value="4"/>
                 <Property name="formatterFactory" type="javax.swing.JFormattedTextField$AbstractFormatterFactory" editor="org.netbeans.modules.form.editors.AbstractFormatterFactoryEditor">
                   <Format format="#0.00" subtype="-1" type="0"/>
                 </Property>
@@ -379,6 +386,7 @@
             </Component>
             <Component class="xbuild.Components.XFormattedTextField" name="txtFHDUR">
               <Properties>
+                <Property name="horizontalAlignment" type="int" value="4"/>
                 <Property name="formatterFactory" type="javax.swing.JFormattedTextField$AbstractFormatterFactory" editor="org.netbeans.modules.form.editors.AbstractFormatterFactoryEditor">
                   <Format format="#0.00" subtype="-1" type="0"/>
                 </Property>
@@ -386,6 +394,7 @@
             </Component>
             <Component class="xbuild.Components.XFormattedTextField" name="txtSLEN">
               <Properties>
+                <Property name="horizontalAlignment" type="int" value="4"/>
                 <Property name="formatterFactory" type="javax.swing.JFormattedTextField$AbstractFormatterFactory" editor="org.netbeans.modules.form.editors.AbstractFormatterFactoryEditor">
                   <Format format="#0.00" subtype="-1" type="0"/>
                 </Property>
@@ -393,6 +402,7 @@
             </Component>
             <Component class="xbuild.Components.XFormattedTextField" name="txtFLOB">
               <Properties>
+                <Property name="horizontalAlignment" type="int" value="4"/>
                 <Property name="formatterFactory" type="javax.swing.JFormattedTextField$AbstractFormatterFactory" editor="org.netbeans.modules.form.editors.AbstractFormatterFactoryEditor">
                   <Format format="#0.00" subtype="-1" type="0"/>
                 </Property>
@@ -624,6 +634,7 @@
             </Component>
             <Component class="xbuild.Components.XFormattedTextField" name="txtFLDS">
               <Properties>
+                <Property name="horizontalAlignment" type="int" value="4"/>
                 <Property name="formatterFactory" type="javax.swing.JFormattedTextField$AbstractFormatterFactory" editor="org.netbeans.modules.form.editors.AbstractFormatterFactoryEditor">
                   <Format format="#0.00" subtype="-1" type="0"/>
                 </Property>
@@ -631,6 +642,7 @@
             </Component>
             <Component class="xbuild.Components.XFormattedTextField" name="txtFLDD">
               <Properties>
+                <Property name="horizontalAlignment" type="int" value="4"/>
                 <Property name="formatterFactory" type="javax.swing.JFormattedTextField$AbstractFormatterFactory" editor="org.netbeans.modules.form.editors.AbstractFormatterFactoryEditor">
                   <Format format="#0.00" subtype="-1" type="0"/>
                 </Property>
