--- a/src/xbuild/GeneralInfoFrame.form
+++ b/src/xbuild/GeneralInfoFrame.form
@@ -49,7 +49,7 @@
               <Component id="jXPanel2" min="-2" max="-2" attributes="1"/>
               <EmptySpace max="-2" attributes="0"/>
               <Component id="jXPanel3" min="-2" max="-2" attributes="0"/>
-              <EmptySpace pref="30" max="32767" attributes="0"/>
+              <EmptySpace pref="32" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -540,6 +540,7 @@
           <SubComponents>
             <Component class="xbuild.Components.XFormattedTextField" name="txtPAREA">
               <Properties>
+                <Property name="horizontalAlignment" type="int" value="4"/>
                 <Property name="formatterFactory" type="javax.swing.JFormattedTextField$AbstractFormatterFactory" editor="org.netbeans.modules.form.editors.AbstractFormatterFactoryEditor">
                   <Format format="#0.0" subtype="-1" type="0"/>
                 </Property>
@@ -547,6 +548,7 @@
             </Component>
             <Component class="xbuild.Components.XFormattedTextField" name="txtPRNO">
               <Properties>
+                <Property name="horizontalAlignment" type="int" value="4"/>
                 <Property name="formatterFactory" type="javax.swing.JFormattedTextField$AbstractFormatterFactory" editor="org.netbeans.modules.form.editors.AbstractFormatterFactoryEditor">
                   <Format format="#0" subtype="-1" type="0"/>
                 </Property>
@@ -554,6 +556,7 @@
             </Component>
             <Component class="xbuild.Components.XFormattedTextField" name="txtPLEN">
               <Properties>
+                <Property name="horizontalAlignment" type="int" value="4"/>
                 <Property name="formatterFactory" type="javax.swing.JFormattedTextField$AbstractFormatterFactory" editor="org.netbeans.modules.form.editors.AbstractFormatterFactoryEditor">
                   <Format format="#0.0" subtype="-1" type="0"/>
                 </Property>
@@ -561,6 +564,7 @@
             </Component>
             <Component class="xbuild.Components.XFormattedTextField" name="txtPLDR">
               <Properties>
+                <Property name="horizontalAlignment" type="int" value="4"/>
                 <Property name="formatterFactory" type="javax.swing.JFormattedTextField$AbstractFormatterFactory" editor="org.netbeans.modules.form.editors.AbstractFormatterFactoryEditor">
                   <Format format="#0" subtype="-1" type="0"/>
                 </Property>
@@ -568,12 +572,16 @@
             </Component>
             <Component class="xbuild.Components.XFormattedTextField" name="txtPLSP">
               <Properties>
+                <Property name="horizontalAlignment" type="int" value="4"/>
                 <Property name="formatterFactory" type="javax.swing.JFormattedTextField$AbstractFormatterFactory" editor="org.netbeans.modules.form.editors.AbstractFormatterFactoryEditor">
                   <Format format="#0.0" subtype="-1" type="0"/>
                 </Property>
               </Properties>
             </Component>
             <Component class="xbuild.Components.XFormattedTextField" name="txtPLAY">
+              <Properties>
+                <Property name="horizontalAlignment" type="int" value="4"/>
+              </Properties>
             </Component>
             <Component class="org.jdesktop.swingx.JXLabel" name="jXLabel11">
               <Properties>
@@ -700,6 +708,7 @@
           <SubComponents>
             <Component class="xbuild.Components.XFormattedTextField" name="txtHRNO">
               <Properties>
+                <Property name="horizontalAlignment" type="int" value="4"/>
                 <Property name="formatterFactory" type="javax.swing.JFormattedTextField$AbstractFormatterFactory" editor="org.netbeans.modules.form.editors.AbstractFormatterFactoryEditor">
                   <Format format="#0" subtype="-1" type="0"/>
                 </Property>
@@ -707,6 +716,7 @@
             </Component>
             <Component class="xbuild.Components.XFormattedTextField" name="txtHAREA">
               <Properties>
+                <Property name="horizontalAlignment" type="int" value="4"/>
                 <Property name="formatterFactory" type="javax.swing.JFormattedTextField$AbstractFormatterFactory" editor="org.netbeans.modules.form.editors.AbstractFormatterFactoryEditor">
                   <Format format="#0.0" subtype="-1" type="0"/>
                 </Property>
@@ -714,12 +724,16 @@
             </Component>
             <Component class="xbuild.Components.XFormattedTextField" name="txtHLEN">
               <Properties>
+                <Property name="horizontalAlignment" type="int" value="4"/>
                 <Property name="formatterFactory" type="javax.swing.JFormattedTextField$AbstractFormatterFactory" editor="org.netbeans.modules.form.editors.AbstractFormatterFactoryEditor">
                   <Format format="#0.0" subtype="-1" type="0"/>
                 </Property>
               </Properties>
             </Component>
             <Component class="xbuild.Components.XFormattedTextField" name="txtHARM">
+              <Properties>
+                <Property name="horizontalAlignment" type="int" value="4"/>
+              </Properties>
             </Component>
             <Component class="org.jdesktop.swingx.JXLabel" name="jXLabel22">
               <Properties>
