--- a/src/xbuild/InitialConditionFrame.form
+++ b/src/xbuild/InitialConditionFrame.form
@@ -31,7 +31,7 @@
               <Component id="lblLevel" min="-2" max="-2" attributes="0"/>
               <EmptySpace type="separate" max="-2" attributes="0"/>
               <Component id="txtDescription" min="-2" pref="653" max="-2" attributes="0"/>
-              <EmptySpace pref="784" max="32767" attributes="0"/>
+              <EmptySpace pref="219" max="32767" attributes="0"/>
           </Group>
           <Group type="102" alignment="0" attributes="0">
               <Component id="jTabbedPane2" min="-2" pref="899" max="-2" attributes="0"/>
@@ -49,7 +49,7 @@
               </Group>
               <EmptySpace type="unrelated" max="-2" attributes="0"/>
               <Component id="jTabbedPane2" min="-2" pref="408" max="-2" attributes="0"/>
-              <EmptySpace pref="273" max="32767" attributes="0"/>
+              <EmptySpace pref="107" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -237,6 +237,7 @@
                 </Component>
                 <Component class="xbuild.Components.XFormattedTextField" name="txtICRT">
                   <Properties>
+                    <Property name="horizontalAlignment" type="int" value="4"/>
                     <Property name="formatterFactory" type="javax.swing.JFormattedTextField$AbstractFormatterFactory" editor="org.netbeans.modules.form.editors.AbstractFormatterFactoryEditor">
                       <Format format="#0.00" subtype="-1" type="0"/>
                     </Property>
@@ -244,6 +245,7 @@
                 </Component>
                 <Component class="xbuild.Components.XFormattedTextField" name="txtICND">
                   <Properties>
+                    <Property name="horizontalAlignment" type="int" value="4"/>
                     <Property name="formatterFactory" type="javax.swing.JFormattedTextField$AbstractFormatterFactory" editor="org.netbeans.modules.form.editors.AbstractFormatterFactoryEditor">
                       <Format format="#0.00" subtype="-1" type="0"/>
                     </Property>
@@ -327,6 +329,7 @@
                     </Component>
                     <Component class="xbuild.Components.XFormattedTextField" name="txtICREN">
                       <Properties>
+                        <Property name="horizontalAlignment" type="int" value="4"/>
                         <Property name="formatterFactory" type="javax.swing.JFormattedTextField$AbstractFormatterFactory" editor="org.netbeans.modules.form.editors.AbstractFormatterFactoryEditor">
                           <Format format="#0.00" subtype="-1" type="0"/>
                         </Property>
@@ -334,6 +337,7 @@
                     </Component>
                     <Component class="xbuild.Components.XFormattedTextField" name="txtICREP">
                       <Properties>
+                        <Property name="horizontalAlignment" type="int" value="4"/>
                         <Property name="formatterFactory" type="javax.swing.JFormattedTextField$AbstractFormatterFactory" editor="org.netbeans.modules.form.editors.AbstractFormatterFactoryEditor">
                           <Format format="#0.00" subtype="-1" type="0"/>
                         </Property>
@@ -410,6 +414,7 @@
                     </Component>
                     <Component class="xbuild.Components.XFormattedTextField" name="txtICRIP">
                       <Properties>
+                        <Property name="horizontalAlignment" type="int" value="4"/>
                         <Property name="formatterFactory" type="javax.swing.JFormattedTextField$AbstractFormatterFactory" editor="org.netbeans.modules.form.editors.AbstractFormatterFactoryEditor">
                           <Format format="#0.00" subtype="-1" type="0"/>
                         </Property>
@@ -417,6 +422,7 @@
                     </Component>
                     <Component class="xbuild.Components.XFormattedTextField" name="txtICRID">
                       <Properties>
+                        <Property name="horizontalAlignment" type="int" value="4"/>
                         <Property name="formatterFactory" type="javax.swing.JFormattedTextField$AbstractFormatterFactory" editor="org.netbeans.modules.form.editors.AbstractFormatterFactoryEditor">
                           <Format format="#0.00" subtype="-1" type="0"/>
                         </Property>
@@ -499,6 +505,7 @@
                 </Component>
                 <Component class="xbuild.Components.XFormattedTextField" name="txtICWD">
                   <Properties>
+                    <Property name="horizontalAlignment" type="int" value="4"/>
                     <Property name="formatterFactory" type="javax.swing.JFormattedTextField$AbstractFormatterFactory" editor="org.netbeans.modules.form.editors.AbstractFormatterFactoryEditor">
                       <Format format="#0.0" subtype="-1" type="0"/>
                     </Property>
@@ -506,6 +513,7 @@
                 </Component>
                 <Component class="xbuild.Components.XFormattedTextField" name="txtICRES">
                   <Properties>
+                    <Property name="horizontalAlignment" type="int" value="4"/>
                     <Property name="formatterFactory" type="javax.swing.JFormattedTextField$AbstractFormatterFactory" editor="org.netbeans.modules.form.editors.AbstractFormatterFactoryEditor">
                       <Format format="#0.00" subtype="-1" type="0"/>
                     </Property>
