--- a/src/xbuild/OrganicFrame.form
+++ b/src/xbuild/OrganicFrame.form
@@ -203,13 +203,13 @@
                   <Table columnCount="9" rowCount="0">
                     <Column editable="false" title="Day" type="java.lang.Object"/>
                     <Column editable="false" title="&lt;html&gt;&lt;p align=&apos;center&apos;&gt;Residue&lt;br&gt;Material&lt;/p&gt;&lt;/html&gt;" type="java.lang.Object"/>
-                    <Column editable="false" title="&lt;html&gt;&lt;p align=&apos;center&apos;&gt;Amount&lt;br&gt;kg/ha&lt;/p&gt;&lt;/html&gt;" type="java.lang.Object"/>
-                    <Column editable="false" title="&lt;html&gt;&lt;p align=&apos;center&apos;&gt;Nitrogen&lt;br&gt;Concentration&lt;br&gt;%&lt;/p&gt;&lt;/html&gt;" type="java.lang.Object"/>
-                    <Column editable="false" title="&lt;html&gt;&lt;p align=&apos;center&apos;&gt;Phophorus&lt;br&gt;Concentration&lt;br&gt;%&lt;/p&gt;&lt;/html&gt;" type="java.lang.Object"/>
-                    <Column editable="false" title="&lt;html&gt;&lt;p align=&apos;center&apos;&gt;Potass.&lt;br&gt;Concentration&lt;br&gt;%&lt;/p&gt;&lt;/html&gt;" type="java.lang.Object"/>
-                    <Column editable="false" title="&lt;html&gt;&lt;p align=&apos;center&apos;&gt;Incorporation&lt;br&gt;%&lt;/p&gt;&lt;/html&gt;" type="java.lang.Object"/>
-                    <Column editable="false" title="&lt;html&gt;&lt;p align=&apos;center&apos;&gt;Incorporatin&lt;br&gt;Depth&lt;br&gt;cm&lt;/p&gt;&lt;/html&gt;" type="java.lang.Object"/>
-                    <Column editable="false" title="&lt;html&gt;&lt;p align=&apos;center&apos;&gt;Method of&lt;br&gt;Incorporatin&lt;br&gt;Code&lt;/p&gt;&lt;/html&gt;" type="java.lang.Object"/>
+                    <Column editable="false" title="&lt;html&gt;&lt;p align=&apos;center&apos;&gt;Amount&lt;br&gt;kg/ha&lt;/p&gt;&lt;/html&gt;" type="java.lang.Float"/>
+                    <Column editable="false" title="&lt;html&gt;&lt;p align=&apos;center&apos;&gt;Nitrogen&lt;br&gt;Concentration&lt;br&gt;%&lt;/p&gt;&lt;/html&gt;" type="java.lang.Float"/>
+                    <Column editable="false" title="&lt;html&gt;&lt;p align=&apos;center&apos;&gt;Phophorus&lt;br&gt;Concentration&lt;br&gt;%&lt;/p&gt;&lt;/html&gt;" type="java.lang.Float"/>
+                    <Column editable="false" title="&lt;html&gt;&lt;p align=&apos;center&apos;&gt;Potass.&lt;br&gt;Concentration&lt;br&gt;%&lt;/p&gt;&lt;/html&gt;" type="java.lang.Float"/>
+                    <Column editable="false" title="&lt;html&gt;&lt;p align=&apos;center&apos;&gt;Incorporation&lt;br&gt;%&lt;/p&gt;&lt;/html&gt;" type="java.lang.Float"/>
+                    <Column editable="false" title="&lt;html&gt;&lt;p align=&apos;center&apos;&gt;Incorporatin&lt;br&gt;Depth&lt;br&gt;cm&lt;/p&gt;&lt;/html&gt;" type="java.lang.Float"/>
+                    <Column editable="false" title="&lt;html&gt;&lt;p align=&apos;center&apos;&gt;Method of&lt;br&gt;Incorporatin&lt;br&gt;Code&lt;/p&gt;&lt;/html&gt;" type="java.lang.Float"/>
                   </Table>
                 </Property>
                 <Property name="tableHeader" type="javax.swing.table.JTableHeader" editor="org.netbeans.modules.form.editors2.JTableHeaderEditor">
