--- a/src/xbuild/TreatmentFrame.form
+++ b/src/xbuild/TreatmentFrame.form
@@ -32,8 +32,10 @@
           <Group type="102" alignment="1" attributes="0">
               <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="1" attributes="0">
-                  <Component id="jScrollPane1" alignment="0" pref="745" max="32767" attributes="0"/>
+                  <Component id="jScrollPane1" alignment="0" pref="753" max="32767" attributes="0"/>
                   <Group type="102" alignment="1" attributes="0">
+                      <Component id="lblLevel1" min="-2" max="-2" attributes="0"/>
+                      <EmptySpace max="32767" attributes="0"/>
                       <Component id="bnAddLayer" min="-2" max="-2" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
                       <Component id="bnDeleteLayer" min="-2" max="-2" attributes="0"/>
@@ -50,9 +52,10 @@
               <Group type="103" groupAlignment="3" attributes="0">
                   <Component id="bnAddLayer" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="bnDeleteLayer" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="lblLevel1" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace max="-2" attributes="0"/>
-              <Component id="jScrollPane1" pref="581" max="32767" attributes="0"/>
+              <Component id="jScrollPane1" pref="595" max="32767" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
           </Group>
       </Group>
@@ -201,5 +204,13 @@
         </Component>
       </SubComponents>
     </Container>
+    <Component class="org.jdesktop.swingx.JXLabel" name="lblLevel1">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Treatment"/>
+        <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+          <Font name="Segoe UI" size="18" style="1"/>
+        </Property>
+      </Properties>
+    </Component>
   </SubComponents>
 </Form>
