Update button title and fixed can't add appilcation

--- a/src/xbuild/OrganicFrame.form
+++ b/src/xbuild/OrganicFrame.form
@@ -176,7 +176,7 @@
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
               <Image iconType="3" name="/icons/Plus.png"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="Add Layer"/>
+            <Property name="text" type="java.lang.String" value="Add Application"/>
           </Properties>
           <Events>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="bnAddLayerActionPerformed"/>
@@ -187,7 +187,7 @@
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
               <Image iconType="3" name="/icons/Minus.png"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="Delete Layer"/>
+            <Property name="text" type="java.lang.String" value="Delete Application"/>
           </Properties>
           <Events>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="bnDeleteLayerActionPerformed"/>
